--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
-here will be style css
+body {
+    background: "lightblue";
+}
+h1 {
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+h2 {
+    font-weight: 600;
+    font-size: 1.7rem;
+}
+h3 {
+    font-weight: 500;
+    font-size: 1.4rem;
+}
