feat: underline a paragraph, improved syle of my code

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h2 {
     text-align: justify;
 }
 h3 {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.4rem;
     font-family: serif;
     text-align: justify;
@@ -31,7 +31,7 @@ h3 {
     position: absolute;
     width: 200px;
     height: auto;
-    top: 20px;
+    top: 0px;
     right: 0px;
   }
  p {
@@ -48,3 +48,10 @@ h3 {
     list-style-position: outside;
     font-size: 1rem;
   }
+  .underline {
+    text-decoration: underline;
+}
+
+code {
+    fontcolor: brown;
+}
